sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question_Branch__mdt/SFDC_Industry_Assessment_Question_Branch__mdt.object-meta.xml
<CustomObject>
    <description>Configure assessment question sequence based on saved values from previous answers</description>
    <label>SFDC Industry Assessment Question Branch</label>
    <pluralLabel>SFDC Industry Assessment Question Branch</pluralLabel>
</CustomObject>