sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question_Branch__mdt/fields/Associated_Group__c.field-meta.xml
<CustomField>
    <fullName>Associated_Group__c</fullName>
    <description>If populated, the content of this branch is part of a Question Group</description>
    <inlineHelpText>If populated, the content of this branch is part of a Question Group</inlineHelpText>
    <label>Associated Group</label>
    <referenceTo>SFDC_Industry_Assessment_Question_Group__mdt</referenceTo>
    <relationshipLabel>SFDC Industry Assessment Question Branch</relationshipLabel>
    <relationshipName>SFDC_Industry_Assessment_Question_Branch</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>