sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question_Branch__mdt/fields/Controlling_Question__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Question__c</fullName>
    <label>Controlling Question</label>
    <referenceTo>SFDC_Industry_Assessment_Question__mdt</referenceTo>
    <relationshipLabel>Controlling Question</relationshipLabel>
    <relationshipName>SFDC_Industry_Assessment_Question_Branch</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>