sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question_Branch__mdt/fields/Controlling_Question_Value__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Question_Value__c</fullName>
    <label>Controlling Question Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>