sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question_Branch__mdt/fields/External_Render_Flags__c.field-meta.xml
<CustomField>
    <fullName>External_Render_Flags__c</fullName>
    <description>Used when branches are dependent on answers from other questions (and not the immediate question). Delimited by semicolons (&quot;;&quot;) in the form &quot;Field_Name__c=value,value2;Field_Name2__c=value&quot;, etc.</description>
    <inlineHelpText>Used when branches are dependent on answers from other questions (and not the immediate question). Delimited by semicolons (&quot;;&quot;) in the form &quot;Field_Name__c=value,value2;Field_Name2__c=value&quot;, etc.</inlineHelpText>
    <label>External Render Flags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>