sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question_Branch__mdt/fields/Following_Question__c.field-meta.xml
<CustomField>
    <fullName>Following_Question__c</fullName>
    <label>Following Question</label>
    <referenceTo>SFDC_Industry_Assessment_Question__mdt</referenceTo>
    <relationshipLabel>Following Question</relationshipLabel>
    <relationshipName>Following_Question</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>