sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question_Branch__mdt/fields/Is_Default_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_Outcome__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default Outcome</label>
    <type>Checkbox</type>
</CustomField>