sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question_Branch__mdt/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <label>Vertical</label>
    <referenceTo>SFDC_Industry_Vertical__mdt</referenceTo>
    <relationshipLabel>SFDC Industry Assessment Question Branch</relationshipLabel>
    <relationshipName>SFDC_Industry_Assessment_Question_Branch</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>