sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question_Branch__mdt/validationRules/Starting_Question_and_Industry_Both_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>Starting_Question_and_Industry_Both_Set</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Industry__c)) &amp;&amp;  NOT(ISBLANK(Controlling_Question__c))</errorConditionFormula>
    <errorMessage>A Controlling Question can not be set when Industry is defined.</errorMessage>
</ValidationRule>