sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question_Branch__mdt/listViews/All_Branches.listView-meta.xml
<ListView>
    <fullName>All_Branches</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Controlling_Question__c</columns>
    <columns>Controlling_Question_Value__c</columns>
    <columns>Following_Question__c</columns>
    <columns>External_Render_Flags__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Branches</label>
    <language>en_US</language>
</ListView>